--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "tsup": "^8.0.1",
     "typescript": "^5.2.2",
     "vitest": "^1.0.1"
+  },
+  "dependencies": {
+    "effect": "^2.4.0"
   }
 }
